--- a/www/hugo.toml
+++ b/www/hugo.toml
@@ -5,11 +5,16 @@ title = 'Captain Contrary'
 theme = 'hyde'
 
 [params]
-  description = "Your custom description"
- 
+  description = "An Anarcho Chrisitan navigating the world. Home of the Captain Contrary Show."
+
+[params.meta]
+    image = "https://res.cloudinary.com/dafjqauwb/image/upload/v1718319807/captain-contrary/captain-contrary330x330_wzxnk4.png"
+    description = "An Anarcho Chrisitan navigating the world. Home of the Captain Contrary Show."
+    keywords = "liberty, libertarianc, anarcho captialism, anarcho capitalist, patriot, second ammendment, constitution, patriot, boogaloo, the boog, austrian economics,  "
 
 [Menus]
   main = [
       {Name = "Odysee", URL = "https://odysee.com/@CaptainContrary:5"},
+      {Name = "YouTube", URL = "https://youtube.com/@thecaptaincontraryshow"},
       {Name = "Episode Archive", URL = "https://archive.org/details/captain_contrary"}
   ]
