--- a/www/hugo.toml
+++ b/www/hugo.toml
@@ -14,5 +14,6 @@ theme = 'hyde'
   main = [
       {Name = "Odysee", URL = "https://odysee.com/@CaptainContrary:5"},
       {Name = "YouTube", URL = "https://youtube.com/@thecaptaincontraryshow"},
-      {Name = "Episode MP3 Archive", URL = "https://archive.org/details/captain_contrary"}
+      {Name = "Episode MP3 Archive", URL = "https://archive.org/details/captain_contrary"},
+      {Name = "The Antichrist", URL = "./antichrist.html"}
   ]
